# localsolve-open

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  NBR_plus_Compute_gee.ipynb  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  gh-pages.yml
about/: index.html
app/: README.md  app.py  config.py  requirements.txt
app/components/: __init__.py  fire_progression.py  invasive_species.py  severity_analysis.py  veg_burn.py  vegetation_analysis.py
app/components/.ipynb_checkpoints/: __init__-checkpoint.py  fire_progression-checkpoint.py  invasive_species-checkpoint.py  severity_analysis-checkpoint.py  veg_burn-checkpoint.py  vegetation_analysis-checkpoint.py
app/data/: .LATreeswithburn_new.csv.icloud  LATrees_processed.csv  LATreeswithburn_new.csv  Vegeation_withburn_mode_processed.csv  data_loader.py
app/data/.ipynb_checkpoints/: data_loader-checkpoint.py
app/utils/.ipynb_checkpoints/: styling-checkpoint.py
docs/: about.md  index.md
docs/get-involved/: contributing.md  index.md  resources.md
get-involved/: index.html
get-involved/contributing/: index.html
get-involved/resources/: index.html
wildfires/la_wildfires/: .VegetationAnalysis 2.ipynb.icloud  .VegetationAnalysis.ipynb.icloud  Ingest_FIRMS.ipynb  LATrees_withburn.ipynb  NDVI_22_25.js  NDVI_22_25.txt  Vegetation_mapping_with_burn.ipynb  burn_severity_mapping.js  burn_severity_mapping.txt  combine_LA_VIIRS_fires.py  environment.yml  experiments.ipynb  fire_progression_streamlit.py  gee_wind_vectors.js  ingest_firms_fires.py  la_infrastructure_mapping.py  pallisades_vegetation_burn_severity.py  wind_vectors_python.py
wildfires/la_wildfires/Python_gee/: Compute_NBR_dNBR_gee.ipynb  requirements.txt
wildfires/la_wildfires/Python_nbr_gee/: Compute_NBR_dNBR_gee.ipynb  (+1 more)
